# api.support.cafe

./: .gitignore  Cargo.toml  README.md  fly.toml
.github/workflows/: ci.yml
config/: enums.ron  structs.ron  version.toml
config/schema_lists/001_auth/: 001_init.ron
config/schema_lists/010_app/: 010_app_connect.ron  011_app_api.ron
config/schema_lists/010_auth/: 010_init.ron
config/schema_lists/020_app/: 020_app_connect.ron  021_app_api.ron
config/schema_lists/030_app_admin/: 030_app_admin_api.ron
config/schema_lists/040_admin/: 041_admin_api.ron
docs/: README.md  services.json
scripts/utils/: regenerate_endpoints.sh
src/: acme.rs  app.rs  codegen.rs  config.rs  id_types.rs  lib.rs  main.rs
src/codegen/: model.rs
src/config/: doppler_source.rs  loader.rs
src/db/: mod.rs  tables.rs  util.rs
src/db/schema/: app_config.rs  chat_session.rs  mod.rs  support_message.rs  support_user.rs  user.rs
src/handlers/: auth.rs  auth_api.rs  mod.rs
src/handlers/admin/: delete_app.rs  get_all_apps.rs  get_users.rs  mod.rs  set_log_level.rs  set_role.rs
src/handlers/app/: auth.rs  close_session.rs  create_session.rs  list_messages.rs  list_sessions.rs  mod.rs  send_message.rs  subscribe_events.rs
src/handlers/app_admin/: add_support_user.rs  create_app.rs  edit_app.rs  list_apps.rs  list_support_users.rs  mod.rs  remove_support_user.rs
src/handlers/platform/: add_support_user.rs  auth.rs  create_app.rs  delete_app.rs  edit_app.rs  list_support_users.rs  mod.rs  remove_support_user.rs  set_log_level.rs
src/handlers/utils/: mod.rs  receiver.rs  routing_message.rs  subscription_router.rs
src/service/: app.rs  app_connection_registry.rs  bot_router.rs  log.rs  mod.rs  session.rs  user_connection_registry.rs
src/service/bot/: mod.rs  router.rs  service.rs
