[package]
name = "tg_support"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["oldtime", "std", "now"] }
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
crossfire = { version = "3.1.10", features = ["tokio"] }
derive_more = { version = "2.1", features = ["full"] }
endpoint-libs = { version = "1.7.28", features = ["ws", "ws-http1"] }
eyre = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
futures = "0.3"
num-derive = "0.4"
num-traits = "0.2"
psc-nanoid = { version = "3.1.0", features = ["serde", "packed", "rkyv"] }
rkyv = "0.8.12"
secrecy = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smart-default = "0.7"
strum = "0.26"
strum_macros = "0.26"
tgbot = { version = "0.42.0" }
tokio = { version = "1.48", features = ["full", "rt-multi-thread"] }
tracing = "0.1"
url = "2.5.7"
uuid = { version = "1.18", features = ["v4", "serde"] }
worktable = { version = "0.9.0-beta0.2.2" }
honey_id-types = { path = "../honey_id-types" }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std"] }
cert-provider = { git = "https://github.com/dVeon-loch/cert-provider.git", rev = "eb2387f28daf09539504c5b65766e656b7ec2c93", features = ["dns01"], optional = true }

[features]
s3-sync = ["worktable/s3-support"]
acme = ["dep:cert-provider"]
cert-s3-sync = ["acme", "cert-provider/s3-sync"]
